open-source: Stop quote used as image for feature from overflowing.
In small screens, the quote used as a standin for image used
to overflow from screen as it didn't had responsive size set.
This image has additional bound of `max-width: 100%` which
stops them from overflowing which the quote did not.

--- a/static/styles/portico/landing_page.css
+++ b/static/styles/portico/landing_page.css
@@ -4167,6 +4167,18 @@ nav {
         div.quote {
             width: 400px;
         }
+
+        @media (width < 1024px) {
+            div.quote {
+                width: 300px;
+            }
+        }
+
+        @media (width < 768px) {
+            div.quote {
+                width: auto;
+            }
+        }
     }
 
     .topics-image {
